# ds-seminar

./: .buildinfo  .gitignore  README.md  genindex.html  intro.html  objects.inv  prf-prf.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: pages.yaml
_sources/chapter01/: 01.ipynb  01.md  02.ipynb  02.md  intro.ipynb
_sources/chapter02/: 01.ipynb  02.ipynb  03.ipynb  03.md  intro.ipynb  intro.md
_sources/chapter03/: 01.ipynb  02.ipynb  intro.ipynb
_sources/chapter04/: 01.ipynb  01.md  02.ipynb  02.md  intro.ipynb
_sources/chapter05/: 01.ipynb  01.md  02.ipynb  02.md  03.ipynb  intro.ipynb  intro.md
_sources/chapter06/: intro.ipynb  intro.md
_sources/chapter07/: intro.ipynb
_sources/chapter08/: intro.ipynb  intro.md
_sources/chapter09/: intro.ipynb
_sources/chapter10/: intro.ipynb
_sources/chapter11/: intro.ipynb  intro.md
_sources/chapter12/: intro.ipynb  intro.md
_sources/chapter13/: intro.ipynb
_static/: custom.css
book/: _config.yml  _toc.yml  intro.md
chapter01/: 01.html  02.html  intro.html
chapter02/: 01.html  02.html  03.html  intro.html
chapter03/: 01.html  02.html  intro.html
chapter04/: 01.html  02.html  intro.html
chapter05/: 01.html  02.html  03.html  intro.html
chapter06/: intro.html
chapter07/: intro.html
chapter08/: intro.html
chapter09/: intro.html
chapter10/: intro.html
chapter11/: intro.html
chapter12/: intro.html
chapter13/: intro.html
chapter14/: intro.html
chapter15/: intro.html
notebooks/: 01.html
programming/: intro.html  recursion.html
src/: fix_link.py
(+26 files in other folders)
