[project]
name = "ds-seminar"
version = "0.0.1"
description = "Data Science Seminar for Beginners"
authors = [
    { name = "matt", email = "matt76k@gmail.com" }
]
dependencies = [
    "jupyter-book>=1.0.4.post1",
    "pyppeteer>=2.0.0",
    "sphinx-proof>=0.1.3",
    "numpy>=1.18.5,<2.0.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.3",
    "japanize-matplotlib>=1.1.3",
    "seaborn>=0.13.2",
    "scikit-learn>=1.6.1",
    "torch>=2.3.1",
    "torchvision>=0.18.1",
    "lightgbm>=4.5.0",
    "torch-geometric>=2.5.3",
    "sudachipy>=0.6.10",
    "sudachidict-core>=20250129",
    "neologdn>=0.5.3",
    "plotly>=6.0.1",
    "gymnasium[classic-control]>=1.1.1",
    "scipy>=1.7.0,<1.14.0",
    "myst-nb>=1.2.0",
    "myst-parser>=3.0,<4.0",
    "python-louvain>=0.16",
    "community>=1.0.0b1",
    "wordcloud>=1.9.4",
    "gensim>=4.3.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ds_seminar"]
